# coreclr

tests/src/Interop/: CMakeLists.txt  ReadMe.md
tests/src/Interop/Desktop/PInvoke/Array/MarshalArrayAsField/LPArrayNative/: CMakeLists.txt  MarshalArrayByValArrayNative.cpp
tests/src/Interop/Desktop/PInvoke/CriticalHandles/CPPComponent/: CMakeLists.txt  module.cpp  module.def
tests/src/Interop/Desktop/PInvoke/DateTime/: CMakeLists.txt  DateTime.cs  NativeDateTime.cpp  NativeDateTime.def
tests/src/Interop/Desktop/PInvoke/Decimal/PInvoke/: CMakeLists.txt  Client.cs
tests/src/Interop/Desktop/PInvoke/Decimal/ReversePInvoke/: CMakeLists.txt  Client.cs  RevLIb.cpp
tests/src/Interop/Desktop/PInvoke/ExactSpelling/: CMakeLists.txt  PInvoke_ExactSpelling.def  Server.cpp  main.cs
tests/src/Interop/Desktop/PInvoke/Miscellaneous/MultipleAssembliesWithSamePInvoke/: CMakeLists.txt  MultipleAssembliesWithSamePInvoke.cs  MultipleAssembliesWithSamePInvoke.csproj  NativeDll.cpp  NativeDll.def
tests/src/Interop/Desktop/PInvoke/Miscellaneous/MultipleAssembliesWithSamePInvoke/ManagedDll1/: ManagedDll1.cs
tests/src/Interop/Desktop/PInvoke/Miscellaneous/MultipleAssembliesWithSamePInvoke/ManagedDll2/: ManagedDll2.cs
tests/src/Interop/Desktop/PInvoke/NativeCallManagedComVisible/: CMakeLists.txt  ComVisibleClient.cpp
tests/src/Interop/Desktop/PInvoke/NativeCallManagedComVisible/AssemblyTrue/: AssemblyTrue.cs
tests/src/Interop/Desktop/PInvoke/NativeCallManagedComVisible/AssemblyWithoutComVisible/: AssemblyWithoutComVisible.cs
tests/src/Interop/Desktop/PInvoke/NativeCallManagedComVisible/Default/: Default.cs
tests/src/Interop/Desktop/PInvoke/SafeHandles/Interface/: CMakeLists.txt  Interface.cs  PInvoke_SafeHandle_MarshalAs_Interface.cpp  PInvoke_SafeHandle_MarshalAs_Interface.def
tests/src/Interop/Desktop/PInvoke/SafeHandles/ReleaseHandle/: CMakeLists.txt  PInvoke_SafeHandle_ReleaseHandle.cpp  PInvoke_SafeHandle_ReleaseHandle.def  ReleaseHandle.cs
tests/src/Interop/Desktop/PInvoke/SizeParamIndex/PInvoke/PassingByOutClient/: CMakeLists.txt  PassingByOutClient.cs  PassingByOutServer.cpp  PassingByOutServer.def
tests/src/Interop/Desktop/PInvoke/SizeParamIndex/PInvoke/PassingByRefClient/: CMakeLists.txt  PassingByRefClient.cs  PassingByRefServer.cpp  PassingByRefServer.def
tests/src/Interop/Desktop/PInvoke/SizeParamIndex/ReversePInvoke/PassingByOutClient/: CMakeLists.txt  PassingByOutClient.cs  PassingByOutServer.cpp
tests/src/Interop/Desktop/PInvoke/SizeParamIndex/ReversePInvoke/PassingByRefClient/: CMakeLists.txt  PassingByRefClient.cs  PassingByRefServer.cpp
tests/src/Interop/Desktop/PInvoke/Structures/DelegatePInvoke/MarshalExpStruct/: CMakeLists.txt  MarshalExpStructAsParamDLL.h  MarshalExpStructReversePInvokeNative.cpp  MarshalExpStructReversePInvokeNative.def
tests/src/Interop/Desktop/PInvoke/Structures/DelegatePInvoke/MarshalExpStruct/DelegatePInvokeManaged/: DelegatePInvokeManaged.cs
tests/src/Interop/Desktop/PInvoke/Structures/DelegatePInvoke/MarshalExpStruct/ReversePInvokeManaged/: ReversePInvokeManaged.cs
tests/src/Interop/Desktop/PInvoke/Structures/DelegatePInvoke/MarshalSeqStruct/: CMakeLists.txt  MarshalSeqStructDelRevPInvokeNative.cpp  MarshalSeqStructDelRevPInvokeNative.def  MarshalSeqStructDelRevPInvokeNative.h
tests/src/Interop/Desktop/PInvoke/Structures/DelegatePInvoke/MarshalSeqStruct/DelegatePInvoke/: DelegatePInvoke.cs
tests/src/Interop/Desktop/PInvoke/Structures/DelegatePInvoke/MarshalSeqStruct/ReversePInvoke/: ReversePInvoke.cs
tests/src/Interop/Desktop/PInvoke/Structures/PInvoke/: CMakeLists.txt  Helper.cs  MarshalStructAsParamDLL.cpp  MarshalStructAsParamDLL.def  MarshalStructAsParamDLL.h  Struct.cs
tests/src/Interop/Desktop/PInvoke/Structures/PInvoke/AsLayoutExp/: AsLayoutExp.cs
tests/src/Interop/Desktop/PInvoke/Structures/PInvoke/AsLayoutSeq/: AsLayoutSeq.cs
tests/src/Interop/Desktop/PInvokeTest/Decimal/ReversePInvoke/: CMakeLists.txt  DecimalTest.cs  RevNative.cpp  RevNative.def
tests/src/Interop/Desktop/PInvokeTest/Primitives/Int/: CMakeLists.txt  ClientPInvokeIntTest.cs  ClientPInvokeIntTest.csproj  PInvokeIntNative.cpp  PInvokeIntNative.def  PInvokeIntTest.cs  PInvokeIntTest.csproj
tests/src/Interop/MarshalAPI/AddReleaseRef/: AddReleaseRefTest.cs  AddReleaseRefTest.csproj
tests/src/Interop/MarshalAPI/ReleaseComObject/: ReleaseComObjectTest.cs  ReleaseComObjectTest.csproj
tests/src/Interop/PInvoke/CriticalHandles/: CriticalHandlesNative.cpp
tests/src/Interop/PInvoke/DllImportPath/: DllImportPathTest.cs  DllPathNative.cpp
tests/src/Interop/PInvoke/ExactSpelling/: CMakeLists.txt  ExactSpellingNative.def  ExactSpellingTest.csproj
tests/src/Interop/PInvoke/NativeCallManagedComVisible/: ComVisibleNative.cpp
tests/src/Interop/PInvoke/SafeHandles/: SafeHandleNative.cpp  StructDefs.cs
tests/src/Interop/PInvoke/Structures/DelegatePInvoke/MarshalExpStruct/: CMakeLists.txt  ExpStructAsParamNative.cpp  ExpStructAsParamNative.def  ExpStructAsParamNative.h
tests/src/Interop/PInvoke/Structures/DelegatePInvoke/MarshalExpStruct/DelegatePInvoke/: DelegatePInvokeTest.cs  DelegatePInvokeTest.csproj
tests/src/Interop/PInvoke/Structures/DelegatePInvoke/MarshalExpStruct/ReversePInvokeManaged/: ReversePInvokeTest.cs  ReversePInvokeTest.csproj
tests/src/Interop/PInvoke/Structures/DelegatePInvoke/MarshalSeqStruct/: CMakeLists.txt  SeqStructDelRevPInvokeNative.cpp  SeqStructDelRevPInvokeNative.def  SeqStructDelRevPInvokeNative.h
tests/src/Interop/PInvoke/Structures/DelegatePInvoke/MarshalSeqStruct/DelegatePInvoke/: DelegatePInvokeTest.cs
tests/src/Interop/PInvoke/Structures/DelegatePInvoke/MarshalSeqStruct/ReversePInvoke/: ReversePInvokeTest.cs
tests/src/Interop/PInvoke/Structures/PInvoke/: AsParamNative.cpp  AsParamNative.def  AsParamNative.h  CMakeLists.txt  Helper.cs  Struct.cs
tests/src/Interop/PInvoke/Structures/PInvoke/AsLayoutExp/: AsLayoutExpTest.cs  AsLayoutExpTest.csproj
tests/src/Interop/PInvoke/Structures/PInvoke/AsLayoutSeq/: AsLayoutSeqTest.cs  AsLayoutSeqTest.csproj
(+288 files in other folders)
